kubernetes/mini/core/database/dragonfly/cluster/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly-operator
        - matchLabels:
            app.kubernetes.io/name: dragonfly
      toPorts:
        - ports:
            - port: "9999"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly
      toPorts:
        - ports:
            - port: "9999"
              protocol: TCP

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly-operator
        - matchLabels:
            app.kubernetes.io/name: dragonfly
      toPorts:
        - ports:
            - port: "9999"
              protocol: TCP

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-dragonfly
spec:
  endpointSelector:
    matchLabels:
      db.home.arpa/dragonfly: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
